--- a/busines/css/style.css
+++ b/busines/css/style.css
@@ -523,6 +523,7 @@ h2 i {
     background: #fffdfd;
     position: relative;
     padding-top: 20px;
+    transition: all ease .5s;
 }
 .getit .round:hover{
     -webkit-box-shadow: 0px 0px 13px -1px rgba(0,0,0,0.75);
