--- a/busines/css/style.css
+++ b/busines/css/style.css
@@ -652,7 +652,58 @@ h2 i {
     right: -70px;
     top: -60px;
 }
-
+.other{
+    background: url(../img/bg_other.png);
+    width: 100%;
+    margin: 80px 0;
+}
+.other-content{
+    max-width: 890px;
+    text-align: center;
+    margin: 0 auto;
+    -webkit-background-size: cover;
+    background-size: cover;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+.other h2{
+    color: #fff;
+    margin: 0;
+    margin-bottom: 30px;
+}
+.other .round{
+    background: #4279df;
+}
+.other .round .oth1{
+    background-image: url(../img/oth1.png);
+    -webkit-background-size: cover;
+    background-size: cover;
+    width: 60px;
+}
+.other .round .oth2{
+    background-image: url(../img/oth2.png);
+    -webkit-background-size: cover;
+    background-size: cover;
+    width: 60px;
+}
+.other .round .oth3{
+    background-image: url(../img/oth3.png);
+    -webkit-background-size: cover;
+    background-size: cover;
+    width: 60px;
+}
+.other .round .oth4{
+    background-image: url(../img/oth4.png);
+    -webkit-background-size: cover;
+    background-size: cover;
+    width: 60px;
+}
+.other .round .oth5{
+    background-image: url(../img/oth5.png);
+    -webkit-background-size: cover;
+    background-size: cover;
+    width: 60px;
+}
 .l {
     width: 1000px;
     height: 3px;
